Audio update finished

--- a/Curiosity/configuration.json
+++ b/Curiosity/configuration.json
@@ -3,9 +3,9 @@
   "minDistance": 0,
   "saveZone": 360,
   "killZone": 110,
-  "heartbeatMinVolume": 0.5,
-  "heartbeatMaxVolume": 1.0,
-  "heartbeatStartVolume": 0.5,
+  "startingVolume": 0.5,
+  "finishingVolume": 1.0,
+  "waitingVolume": 0.1,
   "heartbeatMinRate": 1.0,
   "heartbeatMaxRate": 2.0,
   "heartbeatStartRate": 1.0,
