--- a/Curiosity/configuration.json
+++ b/Curiosity/configuration.json
@@ -15,6 +15,7 @@
   "saveActivateSeconds": 10,
   "autoSaveSeconds": 10,
   "restartIntervalSeconds": 10,
+  "portPath": "/dev/cu.usbmodem83101",
   "original_frameRate": 60.0,
   "original_saveActivateSeconds": 10,
   "original_autoSaveSeconds": 60,
